syntax = "proto3";

option go_package = "pkg/grpc";

package shw;

message CommonResponse {
  bool ok = 1;
  int64 statusCode = 2;
  string message = 3;
}

message UserInfo {
  uint64 id = 1;
  string name = 2;
  string role = 3;
}
