syntax = "proto3";

option go_package = "pkg/grpc";

package shw;


service FamilyService {
    rpc GetFamily (FamilyRequest) returns (FamilyResponse) {}
    rpc CreateFamily (Family) returns (FamilyCommonResponse) {}
    rpc UpdateFamily (Family) returns (FamilyCommonResponse) {}
    rpc DeleteFamily (Family) returns (FamilyCommonResponse) {}
    rpc AddFamilyMember (Family) returns (FamilyCommonResponse) {}
}

message FamilyCommonResponse {
  bool ok = 1;
  int64 statusCode = 2;
  string message = 3;
}

message FamilyRequest {
    uint64 userId = 1;
}

message AddFamilyMemberRequest {
    uint64 email = 1;
    uint64 familyId = 2;
}

message FamilyResponse {
    repeated Family family = 1;
}

message FamilyUserInfo {
  uint64 id = 1;
  string name = 2;
}

message Family {
    uint64 id = 1;
    repeated FamilyUserInfo user = 2;
    string name = 3;
    string pointPerWorkTime = 4;
}


